--- a/.pipeline/cloudbuild.yaml
+++ b/.pipeline/cloudbuild.yaml
@@ -13,13 +13,13 @@ steps:
   env:
     - "JFROG_CLI_TEMP_DIR=./"
     - "JFROG_CLI_HOME_DIR=./"
-  id: 'configure_artifactory'
+  id: 'setup_environment'
 
 # Run Test
 - name: 'gcr.io/cloud-builders/go:alpine'
   args: ['test']
   env: ['PROJECT_ROOT=github.com/jainishshah17/containerize-go-microservice']
-  id: 'test'
+  id: 'build_test_app'
 
 # build docker image with two tags:
 # latest and commit sha
@@ -29,9 +29,9 @@ steps:
   - '--tag=kubecon-docker.jfrog.team/go-app:latest'
   - '--tag=kubecon-docker.jfrog.team/go-app:$BUILD_ID'
   - '.'
-  id: 'build_image'
+  id: 'containerize_app'
   waitFor:
-  - 'test'
+  - 'build_test_app'
 
 
 # Push docker image to JFrog Artifactory using JFrog CLI
@@ -40,9 +40,9 @@ steps:
   env:
   - "JFROG_CLI_TEMP_DIR=./"
   - "JFROG_CLI_HOME_DIR=./"
-  id: 'push_image_static'
+  id: 'push_static_tag'
   waitFor:
-  - 'build_image'
+  - 'containerize_app'
 
 # Push latest docker image to JFrog Artifactory using JFrog CLI
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
@@ -50,9 +50,11 @@ steps:
   env:
   - "JFROG_CLI_TEMP_DIR=./"
   - "JFROG_CLI_HOME_DIR=./"
-  id: 'push_image_dynamic'
+  id: 'push_dynamic_tag'
   waitFor:
-  - 'push_image_static'
+  - 'push_static_tag'
+
+# Build and Push Helm chart
 
 # Capture Build Information
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
@@ -62,7 +64,7 @@ steps:
   - "JFROG_CLI_HOME_DIR=./"
   id: 'capture_build_info'
   waitFor:
-  - 'push_image_dynamic'
+  - 'push_dynamic_tag'
 
 # Publish Build Information to Artifactory
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
@@ -80,7 +82,7 @@ steps:
   env:
   - "JFROG_CLI_TEMP_DIR=./"
   - "JFROG_CLI_HOME_DIR=./"
-  id: 'scan_build'
+  id: 'xray_scan_build'
   waitFor:
   - 'publish_build_info'
 
@@ -94,4 +96,4 @@ steps:
   - "JFROG_CLI_HOME_DIR=./"
   id: 'promote_build'
   waitFor:
-  - 'scan_build'
+  - 'xray_scan_build'
