--- a/.pipeline/cloudbuild-deploy.yaml
+++ b/.pipeline/cloudbuild-deploy.yaml
@@ -6,7 +6,7 @@
 
 steps:
 
-# Push docker image to JFrog Artifactory using JFrog CLI
+# Prepare AQL Query
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
   entrypoint: 'bash'
   args: ['-c', 'sed -E "s/VERSION/${_BUNDLE_VERSION}/g; s/ART_ID/${_SOURCE_ART_ID}/g; s/HELM_CHART/${_HELM_CHART}/g; s/DOCKER_TAG/${_DOCKER_IMAGE_TAG}/g" .pipeline/releaseBundle.json > .pipeline/bundle.json']
@@ -15,7 +15,7 @@ steps:
   - "JFROG_CLI_HOME_DIR=./"
   id: 'prepare_aql_query'
 
-# Push docker image to JFrog Artifactory using JFrog CLI
+# Create Release Bundle
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
   entrypoint: 'bash'
   args: [ '-c', 'curl -X POST -u ${_USER}:${_PASSWORD} -H "Content-Type: application/json" ${_DIST_URL}/api/v1/release_bundle -T .pipeline/bundle.json']
@@ -23,3 +23,16 @@ steps:
   - "JFROG_CLI_TEMP_DIR=./"
   - "JFROG_CLI_HOME_DIR=./"
   id: 'create_release_bundle'
+  waitFor:
+  - 'prepare_aql_query'
+
+# Sign Release Bundle
+- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+  entrypoint: 'bash'
+  args: [ '-c', 'curl -X POST -H "Content-Type: application/json" -u ${_USER}:${_PASSWORD} ${_DIST_URL}/api/v1/release_bundle/go-service/${_CHART_VERSION}/sign']
+  env:
+  - "JFROG_CLI_TEMP_DIR=./"
+  - "JFROG_CLI_HOME_DIR=./"
+  id: 'sign_release_bundle'
+  waitFor:
+  - 'create_release_bundle'
