--- a/.pipeline/cloudbuild-deploy.yaml
+++ b/.pipeline/cloudbuild-deploy.yaml
@@ -29,7 +29,7 @@ steps:
 # Sign Release Bundle
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
   entrypoint: 'bash'
-  args: [ '-c', 'curl -X POST -H "Content-Type: application/json" -u ${_USER}:${_PASSWORD} ${_DIST_URL}/api/v1/release_bundle/go-service/${_CHART_VERSION}/sign']
+  args: [ '-c', 'curl -X POST -H "Content-Type: application/json" -u ${_USER}:${_PASSWORD} ${_DIST_URL}/api/v1/release_bundle/go-service/${_BUNDLE_VERSION}/sign']
   env:
   - "JFROG_CLI_TEMP_DIR=./"
   - "JFROG_CLI_HOME_DIR=./"
