--- a/.pipeline/cloudbuild.yaml
+++ b/.pipeline/cloudbuild.yaml
@@ -28,7 +28,7 @@ steps:
   - 'build'
   - '--rm'
   - '--no-cache'
-  - '--tag=kubecon-docker.jfrog.team/go-app:latest'
+#  - '--tag=kubecon-docker.jfrog.team/go-app:latest'
   - '--tag=kubecon-docker.jfrog.team/go-app:$BUILD_ID'
   - '.'
   id: 'containerize_app'
@@ -46,15 +46,15 @@ steps:
   waitFor:
   - 'containerize_app'
 
-# Push latest docker image to JFrog Artifactory using JFrog CLI
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
-  args: ['rt', 'docker-push', '${_ART_DOCKER_REGISTRY}/go-app:latest', '${_DOKCER_VIRTUAL_REPO}', '--build-name=${_BUILD_NAME}', '--build-number=$BUILD_ID']
-  env:
-  - "JFROG_CLI_TEMP_DIR=./"
-  - "JFROG_CLI_HOME_DIR=./"
-  id: 'push_dynamic_tag'
-  waitFor:
-  - 'push_static_tag'
+## Push latest docker image to JFrog Artifactory using JFrog CLI
+#- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+#  args: ['rt', 'docker-push', '${_ART_DOCKER_REGISTRY}/go-app:latest', '${_DOKCER_VIRTUAL_REPO}', '--build-name=${_BUILD_NAME}', '--build-number=$BUILD_ID']
+#  env:
+#  - "JFROG_CLI_TEMP_DIR=./"
+#  - "JFROG_CLI_HOME_DIR=./"
+#  id: 'push_dynamic_tag'
+#  waitFor:
+#  - 'push_static_tag'
 
 # Build Helm chart
 - name: 'jainishshah17/google-cloud-builder-helm:2.10.0'
@@ -64,7 +64,7 @@ steps:
   - "JFROG_CLI_HOME_DIR=./"
   id: 'build_helm_chart'
   waitFor:
-  - 'push_dynamic_tag'
+  - 'push_static_tag'
 
 # Push Helm chart to JFrog Artifactory using JFrog CLI
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
