--- a/.pipeline/cloudbuild.yaml
+++ b/.pipeline/cloudbuild.yaml
@@ -57,14 +57,12 @@ steps:
 #  - 'push_static_tag'
 
 # Build Helm chart
-- name: 'jainishshah17/google-cloud-builder-helm:2.10.0'
-  args: [ 'package', 'go-service' ]
+- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+  entrypoint: 'bash'
+  args: [ '-c', 'helm package go-service' ]
   env:
   - "JFROG_CLI_TEMP_DIR=./"
   - "JFROG_CLI_HOME_DIR=./"
-  - "CLOUDSDK_COMPUTE_ZONE=test"
-  - "CLOUDSDK_CONTAINER_CLUSTER=test"
-  - "CLOUDSDK_COMPUTE_REGION=test"
   id: 'build_helm_chart'
   waitFor:
   - 'push_static_tag'
