--- a/go-service/Chart.yaml
+++ b/go-service/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 name: go-service
-version: 0.1.2
+version: 0.1.3
+appVersion: latest
 description: A basic Golang Application with HTTP server
 keywords:
 - http
