--- a/.pipeline/cloudbuild-chart.yaml
+++ b/.pipeline/cloudbuild-chart.yaml
@@ -27,7 +27,7 @@ steps:
   - 'setup_environment'
 
 # Lint Helm chart
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+- name: 'k8s-art.jfrog.team/google-cloud-builder-docker:1.22.1'
   entrypoint: 'bash'
   args: [ '-c', 'helm lint go-service' ]
   env:
@@ -38,7 +38,7 @@ steps:
   - 'update_image_tag'
 
 # Build Helm chart
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+- name: 'k8s-art.jfrog.team/google-cloud-builder-docker:1.22.1'
   entrypoint: 'bash'
   args: [ '-c', 'helm package go-service --save=false' ]
   env:
@@ -49,7 +49,7 @@ steps:
   - 'lint_helm_chart'
 
 # Push Helm chart to JFrog Artifactory using JFrog CLI
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+- name: 'k8s-art.jfrog.team/google-cloud-builder-docker:1.22.1'
   args: ['rt', 'u', 'go-service*.tgz', '${_HELM_REPO}', '--build-name=${_BUILD_NAME}', '--build-number=$BUILD_ID',]
   env:
   - "JFROG_CLI_TEMP_DIR=./"
@@ -59,7 +59,7 @@ steps:
   - 'build_helm_chart'
 
 # Capture Build Information
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+- name: 'k8s-art.jfrog.team/google-cloud-builder-docker:1.22.1'
   args: ['rt', 'bce', '${_BUILD_NAME}', '$BUILD_ID']
   env:
   - "JFROG_CLI_TEMP_DIR=./"
@@ -69,7 +69,7 @@ steps:
   - 'push_helm_chart'
 
 # Publish Build Information to Artifactory
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+- name: 'k8s-art.jfrog.team/google-cloud-builder-docker:1.22.1'
   args: ['rt', 'bp', '${_BUILD_NAME}', '$BUILD_ID']
   env:
   - "JFROG_CLI_TEMP_DIR=./"
@@ -79,7 +79,7 @@ steps:
   - 'capture_build_info'
 
 # Scan Build using JFrog Xray
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+- name: 'k8s-art.jfrog.team/google-cloud-builder-docker:1.22.1'
   args: ['rt', 'bs', '${_BUILD_NAME}', '$BUILD_ID']
   env:
   - "JFROG_CLI_TEMP_DIR=./"
@@ -89,7 +89,7 @@ steps:
   - 'publish_build_info'
 
 # Promote Build
-- name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
+- name: 'k8s-art.jfrog.team/google-cloud-builder-docker:1.22.1'
   args: ['rt', 'bpr', '${_BUILD_NAME}', '$BUILD_ID', '${_HELM_PROD_REPO}','--status=Released', '--comment=Tested.', '--copy=true' ]
   env:
   - "JFROG_CLI_TEMP_DIR=./"
