--- a/.pipeline/cloudbuild-chart.yaml
+++ b/.pipeline/cloudbuild-chart.yaml
@@ -18,7 +18,7 @@ steps:
 # Update Docker Tag in Helm Chart
 - name: 'jainishshah17/google-cloud-builder-docker:1.22.1'
   entrypoint: 'bash'
-  args: ['-c', 'sed -i "s/latest/${_IMAGE_TAG}/g" go-service/Chart.yaml']
+  args: ['-c', 'sed -i "s/latest/${_IMAGE_TAG}/g; s/0.1.0/${_CHART_VERSION}/g" go-service/Chart.yaml']
   env:
   - "JFROG_CLI_TEMP_DIR=./"
   - "JFROG_CLI_HOME_DIR=./"
